--- a/Homework/1/index.html
+++ b/Homework/1/index.html
@@ -8,21 +8,14 @@
 </head>
 <body>
     <header>
-        <section class="header_up">
-            <div class="logo">
-                <img src="./assets/images/logo.png" alt="logo">
-            </div>
+                <img class="header_logo"src="./assets/images/logo.svg" alt="logo">
             <nav class="header_nav">
-                <a class="active_link" href="#">About</a>
+                <a class="active" href="./">Home</a>
                 <a href="./assets/pages/about.html">About</a>
                 <a href="./assets/pages/contact.html">Contact</a>
                 <a href="./assets/pages/faq.html">FAQ</a>
                 <a href="./assets/pages/help.html">Help</a>
             </nav>
-        </section>
-        <section class="header_cover">
-
-        </section>
     </header>
     <main>
         <p>
