feat: finish layout and content for index.html - Home page

--- a/Homework/1/index.html
+++ b/Homework/1/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
-    <title>Homework</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <title>Homework -= HOME</title>
 </head>
 <body>
     <header>
@@ -18,10 +21,58 @@
             </nav>
     </header>
     <main>
-        <p>
+        <aside>
+            <h2>Useful Resources</h2>
+            <ul>
+                <li><a target="_blank" href="https://developer.mozilla.org/">MDN Web Docs</a></li>
+                <li><a target="_blank" href="https://css-tricks.com/">CSS-Tricks</a></li>
+                <li><a target="_blank" href="https://freecodecamp.org/">freeCodeCamp</a></li>
+                <li><a target="_blank" href="https://frontendmentor.io/">Frontend Mentor</a></li>
+                <li><a target="_blank" href="https://web.dev/">web.dev</a></li>
+            </ul>
+        </aside>
+        <section class="main_about">
             <h1>Home</h1>
-        </p>
+            <div>
+                <h1>Welcome to Nova Web Studio</h1>
+                <p>We craft modern, responsive, and user-friendly websites that make a real impact. Whether you're launching a brand or upgrading your digital presence — we're here to help you shine online.</p>
+                <a href="./assets/pages/about.html" class="btn">Learn More About Us</a>
+            </div>
+            
+            <div>
+                <h2>What We Offer</h2>
+                <ul>
+                    <li><strong>Custom Web Development:</strong> Tailored solutions built with HTML, CSS, JS, and modern frameworks.</li>
+                    <li><strong>Responsive Design:</strong> Perfect look and performance on any screen size.</li>
+                    <li><strong>SEO Optimization:</strong> We build with visibility and search rankings in mind.</li>
+                    <li><strong>Fast Delivery:</strong> Projects delivered on time without compromising quality.</li>
+                </ul>
+            </div>
+            
+            <div>
+                <h2>Have a project in mind?</h2>
+                <p>Let’s bring your ideas to life. Reach out today and get a free consultation.</p>
+                <a href="./assets/pages/contact.html">Get in Touch</a>
+            </div>
+        </section>
     </main>
-    <footer></footer>
+    <footer>
+        <section class="footer_about">
+            <h3>About</h3>
+            <p>We build modern, user-focused websites and applications. <br> Our goal is to create digital solutions that matter.</p>
+        </section>
+        <section class="footer_contact">
+            <p>&copy; 2025 All rights reserved.</p>
+        </section>
+        <section>
+            <nav class="footer_nav">
+                <a href="./">Home</a>
+                <a href="./assets/pages/about.html">About</a>
+                <a href="./assets/pages/contact.html">Contact</a>
+                <a href="./assets/pages/faq.html">FAQ</a>
+                <a href="./assets/pages/help.html">Help</a>
+            </nav>
+        </section>
+    </footer>
 </body>
 </html>
