feat: add full content and layout for About Us page

--- a/Homework/1/assets/pages/about.html
+++ b/Homework/1/assets/pages/about.html
@@ -21,10 +21,61 @@
         </nav>
     </header>
     <main>
-        <p>
-            <h1>About</h1>
-        </p>
+        <aside>
+            <h2>Useful Resources</h2>
+            <ul>
+                <li><a target="_blank" href="https://developer.mozilla.org/">MDN Web Docs</a></li>
+                <li><a target="_blank" href="https://css-tricks.com/">CSS-Tricks</a></li>
+                <li><a target="_blank" href="https://freecodecamp.org/">freeCodeCamp</a></li>
+                <li><a target="_blank" href="https://frontendmentor.io/">Frontend Mentor</a></li>
+                <li><a target="_blank" href="https://web.dev/">web.dev</a></li>
+            </ul>
+        </aside>
+        <section class="main_about">
+            <h1>About us</h1>
+            <div>
+                <p>Nova Web Studio is a team of passionate developers, designers, and problem solvers. We specialize in creating elegant, responsive, and performance-driven websites for individuals and businesses of all sizes.</p>            
+            </div>
+            
+            <div>
+                <h2>Our Mission</h2>
+                <p>To deliver high-quality digital solutions that empower people and organizations to thrive online. We combine technology, creativity, and strategy to build products that stand out.
+                </p>
+            </div>
+            
+            <div>
+                <h2>What We Believe In</h2>
+                <ul>
+                    <li><strong>Innovation:</strong> We embrace new technologies and trends to stay ahead.</li>
+                    <li><strong>Transparency:</strong> Clear communication and honest work define our process.</li>
+                    <li><strong>Collaboration:</strong> We treat every project as a partnership with our clients.</li>
+                    <li><strong>Quality:</strong> We never cut corners. Every line of code matters.</li>
+                </ul>
+            </div>
+            <div>
+                <h2>Meet the Team</h2>
+                <p>We are a distributed team of developers and designers based around the world — connected by our love for clean code and beautiful design. Every project is a new opportunity to create something meaningful.
+                </p>            
+            </div>
+        </section>
     </main>
-    <footer></footer>
+    <footer>
+        <section class="footer_about">
+            <h3>About</h3>
+            <p>We build modern, user-focused websites and applications. <br> Our goal is to create digital solutions that matter.</p>
+        </section>
+        <section class="footer_contact">
+            <p>&copy; 2025 All rights reserved.</p>
+        </section>
+        <section>
+            <nav class="footer_nav">
+                <a href="../../">Home</a>
+                <a href="../../assets/pages/about.html">About</a>
+                <a href="../../assets/pages/contact.html">Contact</a>
+                <a href="../../assets/pages/faq.html">FAQ</a>
+                <a href="../../assets/pages/help.html">Help</a>
+            </nav>
+        </section>
+    </footer>
 </body>
 </html>
