--- a/Homework/1/index.html
+++ b/Homework/1/index.html
@@ -31,10 +31,10 @@
                 <li><a target="_blank" href="https://web.dev/">web.dev</a></li>
             </ul>
         </aside>
-        <section class="main_about">
+        <section class="main_home">
             <h1>Home</h1>
             <div>
-                <h1>Welcome to Nova Web Studio</h1>
+                <h2>Welcome to Nova Web Studio</h2>
                 <p>We craft modern, responsive, and user-friendly websites that make a real impact. Whether you're launching a brand or upgrading your digital presence — we're here to help you shine online.</p>
                 <a href="./assets/pages/about.html" class="btn">Learn More About Us</a>
             </div>
