--- a/Homework/4/index.html
+++ b/Homework/4/index.html
@@ -29,22 +29,30 @@
         </header>
         <!-- /.header -->
         <main class="main">
-            <aside class="aside_left">
-                <h3>Left heading</h3>
-                <nav class="aside_nav">
-                    <a href="#">Link 1</a>
-                    <a href="#">Link 2</a>
-                    <a href="#">Link 3</a>
-                    <a href="#">Link 4</a>
-                    <a href="#">Link 5</a>
-                </nav>
-                <!-- /.aside_nav -->
-            </aside>
-            <!-- /.aside_left -->
-            <div class="main_content">
-
-            </div>
-            <!-- /.main_content -->
+            <section class="section_1">
+                <div class="main_container">
+                    <aside class="aside_left">
+                        <h3>Left heading</h3>
+                        <nav class="aside_nav">
+                            <a href="#">Link 1</a>
+                            <a href="#">Link 2</a>
+                            <a href="#">Link 3</a>
+                            <a href="#">Link 4</a>
+                            <a href="#">Link 5</a>
+                        </nav>
+                        <!-- /.aside_nav -->
+                    </aside>
+                    <!-- /.aside_left -->
+                    <div class="main_content">
+                        
+                    </div>
+                    <!-- /.main_content -->
+                </div>
+                <!-- /.main_container -->
+            </section>
+            <!-- /.section_1 -->
+            <section class="section_2"></section>
+            <!-- /.section_2 -->
         </main>
         <!-- /.main -->
         <footer class="footer"></footer>
